--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <title>My Website</title>
 </head>
+
 <body>
-    <h1>Hello this is my page</h1>
+    <nav class="navbar">
+        <h3 class="navbar-title">Carlos Rauda</h3>
+        <div class="navbar-icons">
+            <img class="navbar-icon" src="./img/whatsapp-icon.svg" alt="whatsapp-icon">
+            <img class="navbar-icon" src="./img/instagram-icon.svg" alt="instagram-icon">
+            
+        </div>
+    </nav>
 </body>
+
 </html>
