feat(header):add header HTML structure

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             
         </div>
     </nav>
+    <header class="header">
+        <div class="header-container">
+            <h1 class="header-title">My biography</h1>
+            <p class="header-subtitle"> Hello my name is Carlos</p>
+        </div>
+    </header>
 </body>
 
 </html>
