--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <h3 class="navbar-title">Carlos Rauda</h3>
-        <div class="navbar-icons">
-            <img class="navbar-icon" src="./img/whatsapp-icon.svg" alt="whatsapp-icon">
-            <img class="navbar-icon" src="./img/instagram-icon.svg" alt="instagram-icon">
-            
-        </div>
-    </nav>
     <header class="header">
+        <nav class="navbar">
+            <h3 class="navbar-title">Carlos Rauda</h3>
+            <div class="navbar-icons">
+                <img class="navbar-icon" src="./img/whatsapp-icon.svg" alt="whatsapp-icon">
+                <img class="navbar-icon" src="./img/instagram-icon.svg" alt="instagram-icon">
+                
+            </div>
+        </nav>
         <div class="header-container">
-            <h1 class="header-title">My biography</h1>
-            <p class="header-subtitle"> Hello my name is Carlos</p>
+            <h1 class="header-title">UN POCO SOBRE MI</h1>
+            <p class="header-subtitle">"El tiempo lo cambia todo,
+                eso es lo que la gente dice, pero no es verdad.
+                Hacer cosas cambia las cosas. No hacer nada,
+                deja las cosas exactamente como están."</p>
         </div>
     </header>
 </body>
