Add section content with text and images.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,23 @@
     </nav>
     <header class="header">
         <div class="header-container">
-            <h1 class="header-title">UN POCO SOBRE MI</h1>
+            <h1 class="header-title">UN VIEJO SABIO UNA VEZ DIJO:</h1>
             <p class="header-subtitle">"El tiempo lo cambia todo,
                 eso es lo que la gente dice, pero no es verdad.
                 Hacer cosas cambia las cosas. No hacer nada,
                 deja las cosas exactamente como están."</p>
         </div>
     </header>
-</body>
 
+    <section class="content">
+        <div>
+            <h1>Sobre mi</h1>
+        </div>
+        <div>
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </section>
+</body>
 </html>
