Finish the section of content

--- a/index.html
+++ b/index.html
@@ -29,12 +29,17 @@
 
     <section class="content">
         <div>
-            <h1>Sobre mi</h1>
+            <h1 class="text">Sobre mi 
+                <br> Soy una persona muy introvertida,
+                aunque me gusta ponerme retos, practicar y
+                sobre todo aprender cosas nuevas que me 
+                ayuden a forjar un futuro prospero. 
+            </h1>
         </div>
-        <div>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+        <div class="about-container-image">
+            <img class="about-img img1" src="https://res.cloudinary.com/drfyvt5er/image/upload/f_auto,q_auto/v1/samples/dessert-on-a-plate" alt="">
+            <img class="about-img img2" src="https://res.cloudinary.com/drfyvt5er/image/upload/f_auto,q_auto/v1/samples/ecommerce/leather-bag-gray" alt="">
+            <img class="about-img img3" src="https://res.cloudinary.com/drfyvt5er/image/upload/f_auto,q_auto/v1/samples/animals/cat" alt="">
         </div>
     </section>
 </body>
